# turdshovel

./: .gitignore  .gitmodules  LICENSE  README.md  mkdocs.yml  nuget.config  pyproject.toml
docs/overrides/: main.html
scripts/: generate_stubs.py  nuget_copy.py
turdshovel/: __init__.py  __main__.py  _nubia.py  constants.py  context.py  main.py  parsing.py  plugin.py
turdshovel/_dlls/: Microsoft.Diagnostics.NETCore.Client.xml  Microsoft.Diagnostics.Runtime.xml
turdshovel/_stubs/Microsoft/Diagnostics/NETCore/: Client.py
turdshovel/_stubs/Microsoft/Diagnostics/Runtime/: DacInterface.py  Implementation.py  Utilities.py  Windows.py
turdshovel/_stubs/Microsoft/Diagnostics/Runtime/DataReaders/: Implementation.py
turdshovel/_stubs/System/: Linq.py  Numerics.py
turdshovel/_stubs/System/Buffers/: Binary.py  Text.py  __init__.py
turdshovel/_stubs/System/Collections/: Generic.py  Immutable.py  __init__.py
turdshovel/_stubs/System/Reflection/: PortableExecutable.py  __init__.py
turdshovel/_stubs/System/Reflection/Metadata/: Ecma335.py  __init__.py
turdshovel/_stubs/System/Runtime/: CompilerServices.py  InteropServices.py  __init__.py
turdshovel/_stubs/System/Threading/: __init__.py
turdshovel/_stubs/System/Threading/Tasks/: Sources.py
turdshovel/commands/: core.py  dump.py  target.py
turdshovel/core/: parsing.py
turdshovel/widgets/: assembly.py  directorytree.py  dump.py  footer.py  header.py  scrollbar.py
