[tool.poetry]
name = "turdshovel"
version = "0.3"
description = "Looks through memory dumps for secrets"
authors = ["Leron Gray"]
homepage = "https://github.com/daddycocoaman/turdshovel"
license = "MIT"
classifiers = [
    "Operating System :: Microsoft :: Windows",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
textual = "^0.1.17"
orjson = "^3.6.7"
sortedcontainers = "^2.4.0"
pythonnet = {git = "https://github.com/pythonnet/pythonnet"}
typer = "^0.4.1"
textual-inputs = "^0.2.5"


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
watchdog = "^2.1.7"

[tool.poetry.scripts]
turdshovel = "turdshovel.main:cli_app"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
